OpenAPIにGET Actors 追加
