# backend/openapi/models.gen.go
@@ -3,7 +3,57 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.0 DO NOT EDIT.
 package openapi
 
+// Actor defines model for Actor.
+type Actor struct {
+	ActorId   string `json:"actorId"`
+	ActorName string `json:"actorName"`
+}
+
+// ActorContentsResponse defines model for ActorContentsResponse.
+type ActorContentsResponse struct {
+	ActorId   string      `json:"actorId"`
+	ActorName string      `json:"actorName"`
+	Contents  ContentList `json:"contents"`
+}
+
+// ActorsResponse defines model for ActorsResponse.
+type ActorsResponse struct {
+	Actors []Actor `json:"actors"`
+}
+
+// AnimeContent defines model for AnimeContent.
+type AnimeContent struct {
+	ContentId   string `json:"contentId"`
+	Description string `json:"description"`
+	Period      string `json:"period"`
+	Title       string `json:"title"`
+}
+
+// ContentList defines model for ContentList.
+type ContentList struct {
+	Anime []AnimeContent `json:"anime"`
+	Live  []LiveContent  `json:"live"`
+	Radio []RadioContent `json:"radio"`
+}
+
 // HealthCheckResponse defines model for HealthCheckResponse.
 type HealthCheckResponse struct {
 	Status string `json:"status"`
+}
+
+// LiveContent defines model for LiveContent.
+type LiveContent struct {
+	ContentId   string `json:"contentId"`
+	Date        string `json:"date"`
+	Description string `json:"description"`
+	Title       string `json:"title"`
+}
+
+// RadioContent defines model for RadioContent.
+type RadioContent struct {
+	ContentId    string  `json:"contentId"`
+	Description  string  `json:"description"`
+	ScheduleDay  *string `json:"schedule_day,omitempty"`
+	ScheduleType *string `json:"schedule_type,omitempty"`
+	Title        string  `json:"title"`
 }
